test/errors/ERR.tec
! TECO test: Test ERR error !
! Commands: ?ERR !
! Requirements: None !
! Execution: Standard !
! Expect: ?ERR [ERR.log] !

! Include: setup-01.tec !

@^UA{/dev/foo}                      ! Name of output file !

@EW/^EQA/                           ! Test: open file for write !

! Include: cleanup-01.tec !
